Thu Feb 23 16:37:44 UTC 2012  Jeff Schmitz  <schmitzj@ociweb.com>

        * dds/DCPS/RTPS/ParameterListConverter.cpp:

          Adjust comments to no longer say TODO.

Thu Feb 23 15:08:10 UTC 2012  Brian Johnson  <johnsonb@ociweb.com>

        * MPC/config/coverage_optional.mpb:

          Changed to "--coverage" flags which set all appropriate flags
          for coverage.

        * dds/DCPS/DataReaderImpl.cpp:

          Fixed initialization order.

Wed Feb 22 20:02:27 UTC 2012  Brian Johnson  <johnsonb@ociweb.com>

        * dds/DCPS/ConfigUtils.cpp:

          Verifying section was actually opened (coverity).

        * dds/DCPS/DataReaderImpl.cpp:

          Cleaned up overly complex code and ctor initialization
          (coverity).

        * dds/DCPS/RepoIdConverter.h:
        * dds/DCPS/RepoIdConverter.cpp:

          Changed federationId and participantId to use appropriate
          type (coverity).

        * dds/DCPS/ZeroCopySeq_T.cpp:

          Fixed missed setting of sc_buffer_ (coverity).

Wed Feb 22 19:52:02 UTC 2012  Brian Johnson  <johnsonb@ociweb.com>

        * tests/DCPS/KeyTest/run_test.pl:
        * tests/DCPS/PersistentDurability/run_test.pl:
        * tests/DCPS/UnitTests/run_test_coverage.pl:

          Added "lone" process flag to create_process to allow better
          coverage metrics.

Wed Feb 22 18:49:42 UTC 2012  Brian Johnson  <johnsonb@ociweb.com>

        * bin/PerlDDS/ProcessFactory.pm:

          Added optional parameter to create_process to indicate that
          a process will be a "lone" process, so more than one coverage
          process can be created in a single run.

        * tests/DCPS/UnitTests/run_test.pl:

          Called create_process passing in "lone" process, so each unit
          test will collect coverage metrics.

Wed Feb 22 18:21:39 UTC 2012  Adam Mitz  <mitza@ociweb.com>

        * dds/DCPS/RTPS/ParameterListConverter.cpp:

          Allow infinite durations with 0xffffffff as the nanoseconds.