@@ -1,3 +1,12 @@
+Thu Feb 23 17:12:24 UTC 2012  Adam Mitz  <mitza@ociweb.com>
+
+        * dds/DCPS/RTPS/ParameterListConverter.cpp:
+        * tests/DCPS/UnitTests/ut_ParameterListConverter.cpp:
+
+          For interoperability, always encode the RELIABILITY QoS
+          value (even when it's the default and therefore not required
+          to be included).
+
 Thu Feb 23 16:37:44 UTC 2012  Jeff Schmitz  <schmitzj@ociweb.com>
 
         * dds/DCPS/RTPS/ParameterListConverter.cpp:
